--- a/app/globals.css
+++ b/app/globals.css
@@ -170,3 +170,10 @@ main {
   margin: 1rem;
   color: #7c7a80;
 }
+
+.input-errors {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #a21d4c;
+}
